--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Noto+Serif+KR" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i|Noto+Serif:400,400i,700,700i" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<style>
+		html{scroll-behavior: smooth;}
 		.wrap{width: 1080px; margin: auto; padding: 50px;}
 		.a{width: 1080 px; margin: auto; padding: 30px;}
 		.b{width: 1080px; margin: auto; padding: 30px;}
@@ -11,7 +12,7 @@
 		.d{margin: auto; padding: 30px; padding-top: 100px;}
 		.e{margin: auto; padding: 30px;}
 		img { margin: auto; width: 800px; padding-bottom: 50px; padding-top: 50px; display: block;}
-		h2{font-family: 'Noto Serif KR', serif; font-size: 25px; text-align: center; font-color:; margin-top: 5px; color: #4d3f36;}
+		h2{font-family: 'Noto Serif KR', serif; font-size: 25px; text-align: center; font-color:; margin-top: 5px; color: #4d3f36; font-weight: bold;}
 		p{font-family: 'Noto Sans KR', sanserif; font-size: 16px; text-align: center; line-height: 1.8; color: #404040;}
 		.insta{width: 1080px; margin: auto; padding: 30px; box-shadow: 10px;}
 		div.insta {width: 360px; height: 640px;
@@ -34,7 +35,6 @@
 		  overflow: hidden;
 		  background-color: #ffffff;
 		}
-
 		.topnav a {
 		  float: left;
 		  color: #4d3f36;
@@ -43,15 +43,13 @@
 		  text-decoration: none;
 		  font-size: 30px;
 		  font-family: 'Noto Serif KR', serif;
+		  font-weight: bold;
 		  border-bottom: 3px solid transparent;
 		  display: block;
 		}
-
-		.topnav a:hover { border-bottom: 3px solid gray;}
-
+		.topnav a:hover { border-bottom: 4px solid #4d3f36;}
 		.topnav a.active { background-color: #ffffff;
-		  border-bottom: 3px solid gray;}
-
+		  border-bottom: 4px solid #4d3f36;}
 		.container { position: relative;text-align: center;
 			  color: white;}
 		.centered {
@@ -71,8 +69,21 @@
 			  cursor: pointer;
 			  float: left;
 			}
-		
-
+						#myBtn {
+  						display: none;
+  						position: fixed;
+  						bottom: 20px;
+  						right: 30px;
+  						z-index: 99;
+ 						 font-size: 18px;
+  						border: none;
+ 						 outline: none;
+ 						 
+  						color: #4d3f36;
+  						cursor: pointer;
+  						padding: 15px;
+  						
+								}
 	</style>
 	
 </head>
@@ -80,29 +91,31 @@
 
 
 	<div class="wrap">
-
+		<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+	
 
 		<div style="padding-left: 150px;">
 
 		<div class="topnav">
-			<a class="active" href="#home">Home</a>
-			<a href="#section.a">Top</a>
-			<a href="#section.c">Product</a>
-			<a href="#section.d">Photography</a>
-
+			
+			<a class="active" href="#top">Home</a>
+		
+			<a href="#Product">Product</a>
+			<a href="#sectione">Photography</a>
+			<a href="#top" style="float: right; font-size: 15px;margin-top: 15px; font-weight: lighter;">Shopping bag</a>
 		</div>
 
 
 
 
-		<div style="padding-left: 30px; padding-top: 23px; margin-bottom: 10px;">
-			<h2 style="text-align: left; font-size: 30px; margin-bottom: 2px;"> 방구석 홈카페 패키지 </h2>
-			<p style="text-align: left; font-size: 20px; margin-top: 0px;"> 패키지 하나로 나도 이제 인스타 스타!</p>
+		<div style="padding-left: 10px; padding-top: 23px; margin-bottom: 10px;">
+			<h2 style="text-align: left; font-size: 25px; margin-bottom: 2px;"> 방구석 홈카페 패키지 </h2>
+			<p style="text-align: left; font-size: 18px; margin-top: 0px;"> 패키지 하나로 나도 이제 인스타 스타!</p>
 		</div>
 
 
 		
-		<section class="a">
+		<section1>
 			
 			<div>	
 			<img src="a.jpg" style="float: left; width: 40%;display: block;
@@ -130,8 +143,10 @@
 			<div class="button" style="width: 200px; height:50px; color:#4d3f36; float: left; text-align: center;"> Shopping bag</div>
 			<div class="button" style="width: 200px; height: 50px; background-color: #4d3f36; color: #ffffff; float: left; text-align: center;"> Buy Now</div>
 
-			<div class="button" style="width: 400px; height: 50px; margin-top:10px; background-color: #4d3f36; color:white;"> 앱 설치시 추가할인이용</div>
-			
+			<a href="https://play.google.com/store/apps/details?id=com.google.android.googlequicksearchbox&hl=ko">
+			<div class="button" style="width: 400px; height: 50px; margin-top:10px; background-color: #4d3f36; color:white;" > 
+				앱 설치시 추가할인이용</div></a>
+		
 			
 			</div>
 
@@ -143,9 +158,14 @@
 
 
 		<section class="b">
+			<div>
+			<hr style="width: 78%; margin-top: 500px; margin-left: 105px; border: 1px solid gray;">
+			</div>
 
 			<img src="Main-01.jpg">
-			<img src="intro.gif">
+			
+			<img src="intro.gif" style="width: 70%; margin-top:100px;">
+			
 			<img src="header-01.jpg" style="padding-top: 250px;">
 			<img src="00.png" style="width: 10px; padding: 0;">
 			<h2> 이럴때 구매해보세요. </h2>
@@ -174,11 +194,11 @@
 		<section class="c">
 		
 
-		<div class="col" style="padding-left: 130px;">
+		<div class="col" style="padding-left: 130px; margin-right: 0">
 		<img src="room.jpg" style="float: left; width: 100%">
 		</div>
 		
-			<div class="col" style="width: 600px;">
+			<div class="col" style="width: 400px; margin-top: 300px; margin-bottom: 300px;">
 			<img src="00.png" style="width: 10px; padding: 0;">
 			<h2> 평범했던 방을 감성적인 카페로. </h2>
 			</div>
@@ -188,7 +208,7 @@
 		<img src="tea.jpg" style=" width: 100%">
 		</div>
 
-		<div class="col" style="width: 600px; float: right;">
+		<div class="col" style="width: 400px; float: right; text-align: left; margin-top: 160px;">
 			<img src="00.png" style="width: 10px; padding: 0;">
 			<h2> 반짝반짝 소담스러운 휴식을<br>
 			집에서 만끽해보세요. </h2>
@@ -201,7 +221,7 @@
 
 		<section class="d">
 
-			<img src="pd-01.jpg" style="padding-top: 300px; display: block;">
+			<img src="pd-01.jpg" style="padding-top: 300px; display: block;" id="Product">
 			<img src="00.png" style="width: 10px; padding: 0;">
 			<p style="text-decoration-line: underline; font-size: 20px;"> 
 			빈티지컵 / 우드플레이트 / 조화한송이 / 라탄매트 / 흰색 배경천
@@ -268,7 +288,7 @@
 
 
 
-		<section class="e">
+		<section class="e" id="sectione">
 			<img src="00.png" style="width: 10px; padding: 0;">
 			<h2 style="font-size: 30px;"> 연출사진</h2>
 			<img src="a10.jpg">
@@ -281,8 +301,9 @@
 			
 			<div class="container">
 			<img src="b.jpg">
-			<div class="centered" style="font-family: Noto Serif, Serif; font-size: 20px; color:#4d3f36; position: absolute; top: 43%; left: 50%;"> Small Luxury for me </div>
-			<div class="centered" style="font-family: Noto Serif, Serif; font-size: 30px; color:#4d3f36 "> 빛나는 일상을 만들어보세요. </div>
+			<div class="centered" style="font-family: Noto Serif, Serif; font-size: 16px; color:#4d3f36; position: absolute; top: 39%; left: 50%; "> ◆◆◆ </div>
+			<div class="centered" style="font-family: Noto Serif, Serif; font-size: 20px; color:#4d3f36; position: absolute; top: 44%; left: 50%; "> Small Luxury for me </div>
+			<div class="centered" style="font-family: Noto Serif, Serif; font-size: 30px; color:#4d3f36; font-weight: bold; "> 빛나는 일상을 만들어보세요. </div>
 			</div>
 
 
@@ -316,6 +337,25 @@
 		</section>
 
 		</div>
+
+
+			<script>
+		// When the user scrolls down 20px from the top of the document, show the button
+		window.onscroll = function() {scrollFunction()};
+		function scrollFunction() {
+		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+		    document.getElementById("myBtn").style.display = "block";
+		  } else {
+		    document.getElementById("myBtn").style.display = "none";
+		  }
+		}
+		// When the user clicks on the button, scroll to the top of the document
+		function topFunction() {
+		  document.body.scrollTop = 0;
+		  document.documentElement.scrollTop = 0;
+		}
+		</script>
+
 
 
 </body>
